<resources>
    <string name="app_name">Batikify</string>
    <string name="refresh">REFRESH</string>
    <string name="person">profile</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="empty_image_warning">Silahkan masukkan berkas terlebih dahulu</string>
    <string name="searchbar_hint">Cari nama motif batik anda</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Konfirmasi Password</string>
    <string name="response_fullname">fullName</string>
    <string name="response_email">email</string>
    <string name="response_password">password</string>
    <string name="response_passwordconfirmation">passwordConfirmation</string>
    <string name="loading">memuat…</string>
    <string name="sign_up">SIGN UP</string>
    <string name="success">success</string>
    <string name="yeah">yeah!</string>
    <string name="next">lanjut</string>
    <string name="camera">Kamera</string>
    <string name="cd_cameraButton">Ambil gambar menggunakan kamera</string>
    <string name="cd_imagePreview">Image Preview</string>
    <string name="cd_galeryButton">Ambil gambar menggunakan galeri</string>
    <string name="galery">Galeri</string>
    <string name="analysis">Analisis</string>
    <string name="cd_ivImageBatik">gambar batik</string>
    <string name="name_motif_sample">Batik Megamendung</string>
    <string name="origin_sample">Cirebon</string>
    <string name="description_batik_sample">Batik Mega Mendung adalah jenis motif terkenal batik khas Indonesia. Penggambaran mega mendung menunjukkan akulturasi antar budaya dan ornamentasi Tiongkok. Motif Batik Mega Mendung berasal dari Cirebon, Jawa Barat. Yuk, ketahui lebih lanjut mengenai sejarah hingga filosofi jenis batik yang satu ini.</string>
    <string name="no_data_found">no data found</string>
    <string name="cd_classificationButton">klasifikasi motif batik</string>
    <string name="classification">Classification</string>
    <string name="cd_ensyclopediaButton">klasifikasi motif batik</string>
    <string name="encyclopedia">Encyclopedia</string>
    <string name="history">History</string>
    <string name="news">News</string>
    <string name="see_more">Lihat selengkapnya</string>
    <string name="batikify_description">Batikify is a mobile application that can classify various types of batik and provide various interesting information related aspects of batik.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="dont_have_account">Belum punya akun?</string>
    <string name="fullname_hint">warjo</string>
    <string name="password_hint">******</string>
    <string name="email_hint">warjo@gmail.com</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="home">HOME</string>
    <string name="title_article_sample">Alat dan Bahan untuk Membuat Batik</string>
    <string name="date_article_sample">27 Mei 2024</string>
    <string name="source_article_sample">Kumparan.com</string>
    <string name="description_article_sample">Menentukan zat pelarut dan zat terlarut pada larutan pewarna batik memiliki kelebihan dan dapat berguna untuk tahap</string>
    <string name="dc_ivArticleImage">gambar artikel</string>
    <string name="asal">"asal "</string>
    <string name="logo">logo</string>
    <string name="switch_camera"><![CDATA[ubah kamera/> </androidx.constraintlayout.widget.ConstraintLayout>]]></string>
    <string name="home_page">Home Page</string>
    <string name="ensiklopedia">Ensiklopedia</string>
    <string name="profile">Profile</string>
    <string name="articles">Articles</string>
    <string name="batik_detail">Batik Information</string>
</resources>