<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:backgroundTint="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivBatikImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sample_batik"
            android:contentDescription="@string/cd_ivImageBatik"/>

        <TextView
            android:id="@+id/tvEncyclopediaTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp"
            android:paddingStart="16dp"
            android:paddingEnd="0dp"
            android:text="@string/name_motif_sample"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivBatikImage" />

        <androidx.constraintlayout.utils.widget.MotionLabel
            android:id="@+id/tvBatikComeFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/outline_label"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            android:text="@string/origin_sample"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEncyclopediaTitle" />

        <TextView
            android:id="@+id/tvEncyclopediaDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:maxLines="2"
            android:text="@string/description_batik_sample"
            android:paddingHorizontal="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvBatikComeFrom" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
