<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_height="286dp"
    android:layout_margin="16dp"
    android:backgroundTint="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivArticleImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/news_batik" />

        <TextView
            android:id="@+id/tvArticleTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:text="@string/title_article_sample"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivArticleImage" />

        <androidx.constraintlayout.utils.widget.MotionLabel
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/label_round"
            android:layout_marginHorizontal="12dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="2dp"
            android:text="@string/date_article_sample"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/primary"
            app:layout_constraintBottom_toTopOf="@+id/tvSource"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvArticleTitle" />

        <androidx.constraintlayout.utils.widget.MotionLabel
            android:id="@+id/tvSource"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/label_round"
            android:layout_marginHorizontal="12dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/source_article_sample"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/primary"
            app:layout_constraintBottom_toTopOf="@+id/tvArticleDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDate"  />

        <TextView
            android:id="@+id/tvArticleDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:maxLines="2"
            android:text="@string/description_article_sample"
            android:paddingHorizontal="12dp"
            android:paddingBottom="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSource" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>