<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".screen.home.HomeActivity">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSecondaryContainer"
                app:titleTextColor="@color/primary"
                app:titleTextAppearance="@android:style/TextAppearance.DeviceDefault.Large.Inverse"
                app:menu="@menu/option_menu"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:title="@string/home_page"/>

            <ImageButton
                android:id="@+id/classificationButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_camera_enhance_24"
                android:contentDescription="@string/cd_classificationButton"
                android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:layout_constraintEnd_toStartOf="@+id/ensyclopeidaButton"
                app:layout_constraintStart_toStartOf="parent"
                app:tint="@color/primary"
                android:background="@drawable/bg_icon"/>

            <TextView
                android:id="@+id/tvClassification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/classification"
                android:padding="4dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textAllCaps="true"
                app:layout_constraintTop_toBottomOf="@+id/classificationButton"
                app:layout_constraintEnd_toStartOf="@+id/ensyclopeidaButton"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageButton
                android:id="@+id/ensyclopeidaButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/bg_icon"
                app:tint="@color/primary"
                android:contentDescription="@string/cd_ensyclopediaButton"
                android:src="@drawable/baseline_book_24"
                android:layout_marginTop="28dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/classificationButton"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <TextView
                android:id="@+id/tvEncyclopedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/encyclopedia"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/classificationButton"
                app:layout_constraintTop_toBottomOf="@+id/classificationButton" />

            <!-- Slider History -->
            <TextView
                android:id="@+id/tvHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvClassification" />

            <ImageButton
                android:id="@+id/nextHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/baseline_navigate_next_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEncyclopedia"
                android:contentDescription="@string/see_more"/>

            <ProgressBar
                android:id="@+id/progressBarHistory"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/tvNews"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHistory"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/tvHistory"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constrainedWidth="true"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/tvNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvHistory" />

            <ImageButton
                android:id="@+id/nextNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/baseline_navigate_next_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rvHistory"
                android:contentDescription="@string/see_more"/>

            <!-- Slider Berita -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/tvNews"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constrainedWidth="true"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <ProgressBar
                android:id="@+id/progressBarArticle"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNews"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
